--- a/index.html
+++ b/index.html
@@ -6,87 +6,78 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f2f2f2;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+      background: #f0f8ff;
+      padding: 30px;
+      text-align: center;
     }
-    .calculator {
-      background: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px #ccc;
-      width: 260px;
+    h2 {
+      color: #333;
     }
-    input[type="text"] {
-      width: 100%;
-      height: 40px;
-      text-align: right;
-      margin-bottom: 10px;
-      font-size: 20px;
-      padding: 5px;
-    }
-    .buttons button {
-      width: 60px;
-      height: 40px;
-      font-size: 18px;
+    input, select, button {
+      padding: 10px;
       margin: 5px;
-      cursor: pointer;
+      font-size: 16px;
     }
-    .buttons {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
+    #result {
+      font-weight: bold;
+      margin-top: 15px;
+      font-size: 18px;
+    }
+    #history {
+      margin-top: 20px;
+      text-align: left;
+      max-width: 300px;
+      margin-left: auto;
+      margin-right: auto;
+      background: #fff;
+      padding: 10px;
+      border: 1px solid #ccc;
     }
   </style>
 </head>
 <body>
-  <div class="calculator">
-    <input type="text" id="result" disabled>
-    <div class="buttons">
-      <button onclick="clearDisplay()">C</button>
-      <button onclick="appendValue('/')">/</button>
-      <button onclick="appendValue('*')">*</button>
-      <button onclick="appendValue('-')">-</button>
+  <h2>Simple Calculator</h2>
+  <input type="number" id="num1" placeholder="Enter first number">
+  <select id="operator">
+    <option value="+">+</option>
+    <option value="-">−</option>
+    <option value="*">×</option>
+    <option value="/">÷</option>
+  </select>
+  <input type="number" id="num2" placeholder="Enter second number">
+  <button onclick="calculate()">Calculate</button>
 
-      <button onclick="appendValue('7')">7</button>
-      <button onclick="appendValue('8')">8</button>
-      <button onclick="appendValue('9')">9</button>
-      <button onclick="appendValue('+')">+</button>
-
-      <button onclick="appendValue('4')">4</button>
-      <button onclick="appendValue('5')">5</button>
-      <button onclick="appendValue('6')">6</button>
-      <button onclick="calculateResult()">=</button>
-
-      <button onclick="appendValue('1')">1</button>
-      <button onclick="appendValue('2')">2</button>
-      <button onclick="appendValue('3')">3</button>
-      <button onclick="appendValue('0')">0</button>
-
-      <button onclick="appendValue('.')">.</button>
-    </div>
+  <p id="result">Result: </p>
+  <div id="history">
+    <h3>Calculation History</h3>
+    <ul id="logList"></ul>
   </div>
 
   <script>
-    let result = document.getElementById("result");
+    function calculate() {
+      const num1 = parseFloat(document.getElementById('num1').value);
+      const num2 = parseFloat(document.getElementById('num2').value);
+      const op = document.getElementById('operator').value;
+      let result = '';
 
-    function appendValue(val) {
-      result.value += val;
-    }
-
-    function clearDisplay() {
-      result.value = "";
-    }
-
-    function calculateResult() {
-      try {
-        result.value = eval(result.value);
-      } catch (e) {
-        alert("Invalid Expression");
-        result.value = "";
+      if (!isNaN(num1) && !isNaN(num2)) {
+        switch (op) {
+          case '+': result = num1 + num2; break;
+          case '-': result = num1 - num2; break;
+          case '*': result = num1 * num2; break;
+          case '/': result = num2 !== 0 ? num1 / num2 : 'Cannot divide by zero'; break;
+        }
+        document.getElementById('result').innerText = 'Result: ' + result;
+        updateHistory(num1, op, num2, result);
+      } else {
+        document.getElementById('result').innerText = 'Result: Invalid Input';
       }
+    }
+
+    function updateHistory(n1, op, n2, res) {
+      const log = document.createElement('li');
+      log.textContent = ${n1} ${op} ${n2} = ${res};
+      document.getElementById('logList').prepend(log);
     }
   </script>
 </body>
